--- a/index.org
+++ b/index.org
@@ -18836,7 +18836,7 @@ and turn it into:
     ("Dired" "dired")
     ("Org Mode" "org[ -]?mode\\|\\<org\\>")
     ("Completion" "company\\|helm\\|selectrum")
-    ("Coding" "java\\|php\\|sql\\|cider\\|magit")
+    ("Coding" "java\\|php\\|sql\\|cider\\|git")
     "Math"
     ("Mail and news" "gnus\\|rmail\\|mail\\|notmuch")
     ("Spacemacs" "spacemacs")
